--- a/pom.xml
+++ b/pom.xml
@@ -18,45 +18,83 @@
 		<java.version>11</java.version>
 		<stripe.version>4.2.0</stripe.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+<dependencies>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>com.stripe</groupId>
-		    <artifactId>stripe-java</artifactId>
-		    <version>4.2.0</version>
-		</dependency>
-		<dependency>
-	        <groupId>org.projectlombok</groupId>
-	        <artifactId>lombok</artifactId>
-	        <version>1.18.10</version>
-	        <scope>provided</scope>
-	    </dependency>
-		
-	</dependencies>
+				<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-data-jpa</artifactId>
+				</dependency>
+				<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-thymeleaf</artifactId>
+				</dependency>
+				<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-web</artifactId>
+				</dependency>
+
+				<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-devtools</artifactId>
+						<scope>runtime</scope>
+						<optional>true</optional>
+				</dependency>
+				<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-test</artifactId>
+						<scope>test</scope>
+						<exclusions>
+								<exclusion>
+										<groupId>org.junit.vintage</groupId>
+										<artifactId>junit-vintage-engine</artifactId>
+								</exclusion>
+						</exclusions>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+				<dependency>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>42.2.11</version>
+				</dependency>
+
+				<dependency>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<scope>runtime</scope>
+				</dependency>
+
+				<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+				<dependency>
+						<groupId>org.hibernate</groupId>
+						<artifactId>hibernate-entitymanager</artifactId>
+						<version>5.4.15.Final</version>
+				</dependency>
+
+				<dependency>
+						<groupId>org.hibernate.validator</groupId>
+						<artifactId>hibernate-validator</artifactId>
+				</dependency>
+				<!--   <dependency>
+				  <groupId>org.springframework.boot</groupId>
+				  <artifactId>spring-boot-starter-security</artifactId>
+				</dependency>
+				<dependency>
+				  <groupId>org.springframework.security</groupId>
+				  <artifactId>spring-security-test</artifactId>
+				  <scope>test</scope>
+				</dependency>
+				 -->
+		        <dependency>
+		            <groupId>org.projectlombok</groupId>
+		            <artifactId>lombok</artifactId>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.stripe</groupId>
+		            <artifactId>stripe-java</artifactId>
+		            <version>${stripe.version}</version>
+		        </dependency>
+
+		</dependencies>
 
 	<build>
 		<plugins>
