--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#server.error.whitelabel.enabled=false
-#server.error.path=/error
+server.error.whitelabel.enabled=false
+server.error.path=/error
 
 
 
