--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -78,11 +78,7 @@
 				  <groupId>org.springframework.boot</groupId>
 				  <artifactId>spring-boot-starter-security</artifactId>
 				</dependency>
-				<dependency>
-				  <groupId>org.springframework.security</groupId>
-				  <artifactId>spring-security-test</artifactId>
-				  <scope>test</scope>
-				</dependency>
+				
 				 
 		        <dependency>
 		            <groupId>org.projectlombok</groupId>
@@ -93,6 +89,11 @@
 		            <artifactId>stripe-java</artifactId>
 		            <version>${stripe.version}</version>
 		        </dependency>
+		        <!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity4 -->
+				<dependency>
+   					<groupId>org.thymeleaf.extras</groupId>
+    				<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+				</dependency>
 
 		</dependencies>
 
